bpo-45467: Fix IncrementalDecoder and StreamReader in the "raw-unicode-escape" codec

They support now splitting escape sequences between input chunks.

Add the third parameter "final" in codecs.raw_unicode_escape_decode().
It is True by default to match the former behavior.